# langchain-examples

./: pyproject.toml
src/QA/: QA_openai.ipynb  QA_privateGPT.ipynb
