[tool.poetry]
name = "langchain-examples"
version = "0.1.0"
description = ""
authors = ["Jonathan Nguyen"]
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.23.2"
pandas = ">=2.0"
scipy = ">=1.7.0"
matplotlib = "^3.7.1"
langchain = "^0.0.207"
openai = "^0.27.8"
sentence-transformers = "^2.2.2"
beautifulsoup4 = "^4.12.2"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"
chromadb = "^0.3.26"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
lint = "^1.2.1"
black = "^22.3.0"

[tool.poetry-dynamic-versioning]
enable = true
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"

[build-system]
requires = ["poetry-core>=1.4.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"